fix(panel): adds transition to prevent watched/collected flicker

--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -59,3 +59,30 @@
     box-shadow: $box-shadow;
   }
 }
+
+@mixin transition-show-hide-height($transition: var(--n-bezier), $padding: 12px) {
+  &.hidden {
+    max-height: 0;
+    margin-top: -#{$padding};
+    overflow: hidden;
+    opacity: 0;
+    transition:
+            scale 0.5s $transition,
+            opacity 0.5s $transition,
+            max-height 0.25s $transition,
+            margin-top 0.5s $transition;
+    scale: 0.95;
+
+    &.show {
+      max-height: 100dvh;
+      margin-top: initial;
+      opacity: 1;
+      transition:
+              scale 0.5s $transition,
+              opacity 0.5s $transition,
+              max-height 0.25s $transition,
+              margin-top 0.25s $transition;
+      scale: 1;
+    }
+  }
+}
